...
    
    private var encryptionSheet: some View {
        NavigationView {
            Form {
                Section("Password") {
                    SecureField("Password", text: $encryptionPassword)
                    SecureField("Confirm Password", text: $encryptionConfirmPassword)
                }
                .listRowInsets(EdgeInsets(top: 12, leading: 20, bottom: 12, trailing: 20))
                Section("Hint") {
                    TextField("Optional hint", text: $encryptionHint)
                }
                .listRowInsets(EdgeInsets(top: 12, leading: 20, bottom: 12, trailing: 20))
...
